update layout bugs

--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,7 @@
     height: 100vh;
     position: fixed;
     box-shadow: 0 0 10px rgba(22, 22, 22, 0.8);
+    z-index: 150;
 
 
 }
@@ -257,6 +258,7 @@
         height: 40vh;
         z-index: 50;
         transform: translateX(-25px);
+
 
     }
 
